tests/neg-custom-args/i13838.check
-- Error: tests/neg-custom-args/i13838.scala:10:5 ----------------------------------------------------------------------
10 |  foo  // error
   |     ^
   |no given instance of type Order[X] was found for parameter x$1 of method foo in object FooT
   |
   |where:    X is a type variable
   |.
   |I found:
   |
   |    FooT.OrderFFooA[F, A](FooT.OrderFFooA[F, A](/* missing */summon[Order[F[Foo[A]]]]))
   |
   |But given instance OrderFFooA in object FooT produces a diverging implicit search when trying to match type Order[F[Foo[A]]].
-- [E168] Type Warning: tests/neg-custom-args/i13838.scala:10:5 --------------------------------------------------------
10 |  foo  // error
   |     ^
   |     Implicit search problem too large.
   |     an implicit search was terminated with failure after trying 1000 expressions.
   |     The root candidate for the search was:
   |
   |       given instance OrderFFooA in object FooT  for  Order[Any]}
   |
   |     You can change the behavior by setting the `-Ximplicit-search-limit` value.
   |     Smaller values cause the search to fail faster.
   |     Larger values might make a very large search problem succeed.
   |
   | longer explanation available when compiling with `-explain`
there was 1 feature warning; re-run with -feature for details
